fix MP action buttons on mobile
make alert sign up button full width if WTT button is not present

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -220,7 +220,6 @@ ul {
 
 .person-button-column {
     @extend .columns;
-    padding-left: 0em;
 }
 
 .person-contact-button {
